--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My First Web Page</title>
+    <title>Simple HTML Page</title>
 </head>
 <body>
 
-    <h1>Welcome to My Website</h1>
-    <p>This is my first HTML page.</p>
+    <h1>Hello World!</h1>
+    <p>This is a simple HTML webpage.</p>
 
-    <h2>About Me</h2>
-    <p>I am learning HTML.</p>
+    <h2>Introduction</h2>
+    <p>I am a beginner learning web development.</p>
 
-    <h3>My Hobbies</h3>
+    <h3>My Skills</h3>
     <ul>
-        <li>Coding</li>
-        <li>Reading</li>
-        <li>Music</li>
+        <li>HTML</li>
+        <li>Basic Programming</li>
+        <li>Problem Solving</li>
     </ul>
 
-    <h3>Useful Link</h3>
-    <a href="https://www.google.com" target="_blank">Go to Google</a>
+    <h3>Visit Website</h3>
+    <a href="https://www.wikipedia.org" target="_blank">Open Wikipedia</a>
 
-    <h3>Contact Form</h3>
+    <h3>Feedback Form</h3>
     <form>
-        Name: <input type="text"><br><br>
-        Email: <input type="email"><br><br>
-        <input type="submit" value="Submit">
+        Username: <input type="text"><br><br>
+        Password: <input type="password"><br><br>
+        <input type="submit" value="Login">
     </form>
 
 </body>
