--- a/FirstProject.html
+++ b/FirstProject.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Project</title>
+    <title>My First Web Page</title>
 </head>
 <body>
-    <h1>Introduction</h1>
-    <p>Welcome To ABES ENGIENEERING COLLEGE</p>
+    <h1>Welcome</h1>
+    <p>Hello and welcome to my college website</p>
     <pre>
-        Let's 
-        Start 
-        The 
-        Journey...........
+        This
+        Is
+        The
+        Beginning...........
     </pre>
 </body>
 </html>
