--- a/Restaurant_Menu.html
+++ b/Restaurant_Menu.html
@@ -2,34 +2,36 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>The Spicy Spoon Menu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Spicy Spoon | Menu</title>
+
     <style>
-        body { background-color: #1a1a1a; color: #fff; font-family: serif; padding: 20px; }
-        h1 { border-bottom: 2px solid gold; display: inline-block; }
-        dt { font-weight: bold; color: gold; margin-top: 10px; }
-        dd { margin-left: 20px; font-style: italic; }
-        .price { float: right; color: white; }
-    </style>
-</head>
-<body>
-    <h1>The Spicy Spoon</h1>
-    
-    <h2>Starters</h2>
-    <dl>
-        <dt>Paneer Tikka <span class="price">$5.00</span></dt>
-        <dd>Grilled cottage cheese cubes marinated in spices.</dd>
+        body {
+            background-color: #1a1a1a;
+            color: #ffffff;
+            font-family: Georgia, serif;
+            padding: 20px;
+            max-width: 800px;
+            margin: auto;
+        }
 
-        <dt>Tomato Soup <span class="price">$3.50</span></dt>
-        <dd>Fresh tangy tomatoes with cream and croutons.</dd>
-    </dl>
+        h1 {
+            border-bottom: 2px solid gold;
+            display: inline-block;
+            padding-bottom: 5px;
+        }
 
-    <h2>Main Course</h2>
-    <dl>
-        <dt>Veg Biriyani <span class="price">$12.00</span></dt>
-        <dd>Basmati Rice with vegie cooked in a rich tomato and butter gravy.</dd>
+        h2 {
+            margin-top: 30px;
+            color: gold;
+        }
 
-        <dt>Dal Makhani <span class="price">$10.00</span></dt>
-        <dd>Black lentils cooked overnight with cream.</dd>
-    </dl>
-</body>
-</html>
+        dl {
+            margin-top: 15px;
+        }
+
+        dt {
+            font-weight: bold;
+            color: gold;
+            margin-top: 15px;
+            overflow: hidden
