--- a/Restaurant_Menu.html
+++ b/Restaurant_Menu.html
@@ -25,8 +25,8 @@
 
     <h2>Main Course</h2>
     <dl>
-        <dt>Veg Biriyani <span class="price">$12.00</span></dt>
-        <dd>Basmati Rice with vegie cooked in a rich tomato and butter gravy.</dd>
+        <dt>Veg Biriyani <span class="price">$15.00</span></dt>
+        <dd> Chole Bhature with Dahi and Mango Lassi </dd>
 
         <dt>Dal Makhani <span class="price">$10.00</span></dt>
         <dd>Black lentils cooked overnight with cream.</dd>
