--- a/index.html
+++ b/index.html
@@ -2,31 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple HTML Page</title>
+    <title>My Personal Web Page</title>
 </head>
 <body>
 
-    <h1>Hello World!</h1>
-    <p>This is a simple HTML webpage.</p>
+    <h1>Hello, World!</h1>
+    <p>This is my first website created using HTML.</p>
 
-    <h2>Introduction</h2>
-    <p>I am a beginner learning web development.</p>
+    <h2>About Me</h2>
+    <p>I am a Computer Science student learning web development.</p>
 
-    <h3>My Skills</h3>
-    <ul>
-        <li>HTML</li>
-        <li>Basic Programming</li>
+    <h3>My Interests</h3>
+    <ol>
+        <li>Web Development</li>
         <li>Problem Solving</li>
-    </ul>
+        <li>Listening to Music</li>
+    </ol>
 
-    <h3>Visit Website</h3>
-    <a href="https://www.wikipedia.org" target="_blank">Open Wikipedia</a>
+    <h3>Favorite Website</h3>
+    <a href="https://www.github.com" target="_blank">Visit GitHub</a>
 
-    <h3>Feedback Form</h3>
+    <h3>Contact Me</h3>
     <form>
-        Username: <input type="text"><br><br>
-        Password: <input type="password"><br><br>
-        <input type="submit" value="Login">
+        Name: <input type="text" placeholder="Enter your name"><br><br>
+        Email: <input type="email" placeholder="Enter your email"><br><br>
+        Message:<br>
+        <textarea rows="4" cols="30"></textarea><br><br>
+        <input type="submit" value="Send">
     </form>
 
 </body>
