--- a/FlipcartClonewebsite.html
+++ b/FlipcartClonewebsite.html
@@ -271,7 +271,7 @@
             <div class="product-card">
                 <img src="https://images.unsplash.com/photo-1516035069371-29a1b244cc32?w=300" alt="Camera">
                 <div class="product-title">Top Mirrorless Cameras</div>
-                <div class="product-discount">Shop Now!</div>
+                <div class="product-discount">Shop right Now!</div>
                 <div class="product-tag">Canon, Sony & more</div>
             </div>
 
@@ -292,7 +292,7 @@
             <div class="product-card">
                 <img src="https://images.unsplash.com/photo-1527443224154-c4a3942d3acf?w=300" alt="Monitor">
                 <div class="product-title">Monitors</div>
-                <div class="product-discount">From ₹8,000</div>
+                <div class="product-discount">From ₹8,999</div>
                 <div class="product-tag">Dell, Acer</div>
             </div>
 
@@ -300,7 +300,7 @@
                 <img src="https://images.unsplash.com/photo-1527443224154-c4a3942d3acf?w=300" alt="Monitor">
                 <div class="product-title">Samsung Monitors</div>
                 <div class="product-discount">Min 40% Off</div>
-                <div class="product-tag">Top Rated</div>
+                <div class="product-tag">Top Rated Product</div>
             </div>
         </div>
     </div>
