--- a/Portfolio.html
+++ b/Portfolio.html
@@ -22,7 +22,7 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>I am a B.Tech student passionate about C++ and Web Development.</p>
+            <p>I am a BTech student passionate about C++ and Web Development.</p>
         </section>
 
         <section id="skills">
