--- a/Registration_Form.html
+++ b/Registration_Form.html
@@ -12,7 +12,7 @@
 <body>
     <h2 style="text-align: center;">Register</h2>
     <form action="/submit-registration">
-        <label for="fname">First Name:</label><br>
+        <label for="fname"> Name:</label><br>
         <input type="text" id="fname" name="fname" placeholder="John" required><br>
 
         <label for="email">Email:</label><br>
