--- a/Grid_Gallary.html
+++ b/Grid_Gallary.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>CSS Grid Gallery</title>
+    <title>CSS Gallery</title>
     <style>
         body { padding: 20px; background: #222; }
         h1 { color: white; text-align: center; }
