--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-    <h1>Hello World!</h1>
+    <h1>Hello, World!</h1>
     <p>This is my first website created using HTML.</p>
 
     <h2>About Me</h2>
