twenty-third commit

--- a/Restaurant_Menu.html
+++ b/Restaurant_Menu.html
@@ -29,7 +29,7 @@
         <dd> Chole Bhature with Dahi and Mango Lassi </dd>
 
         <dt>Dal Makhani <span class="price">$10.00</span></dt>
-        <dd>white  lentils cooked overnight with cream.</dd>
+        <dd>Black lentils cooked overnight with cream.</dd>
     </dl>
 </body>
 </html>
